# videopress-platform

./: IDEA.md
videopress-backend/: .gitignore  Jenkinsfile.ci  Makefile  README.md  pyproject.toml
videopress-backend/.github/: CODEOWNERS  pull_request_template.md
videopress-backend/authentication_lambda/: README.md  app.py  requirements.txt
videopress-backend/authentication_lambda/handlers/: __init__.py  login.py  logout.py  otp_verify.py  refresh_token.py
videopress-backend/authentication_lambda/services/: __init__.py  cognito_service.py
videopress-backend/authentication_lambda/tests/: conftest.py  test_login.py
videopress-backend/compression_lambda/: README.md  app.py
videopress-backend/compression_lambda/handlers/: __init__.py  process_compression_job.py
videopress-backend/compression_lambda/services/: __init__.py  mediaconvert_service.py
videopress-backend/compression_lambda/tests/: conftest.py  test_app.py
videopress-backend/docs/: adding-new-lambda.md  lambda-conventions.md
videopress-backend/job_status_lambda/: README.md  app.py  requirements.txt
videopress-backend/job_status_lambda/handlers/: __init__.py  get_job_status.py
videopress-backend/job_status_lambda/services/: __init__.py  job_repository.py
videopress-backend/job_status_lambda/tests/: conftest.py  test_get_job_status.py
videopress-backend/notification_lambda/: README.md  app.py  requirements.txt
videopress-backend/notification_lambda/handlers/: __init__.py  list_notifications.py  mark_read.py  push_email.py
videopress-backend/notification_lambda/services/: __init__.py  notification_repository.py  ses_service.py
videopress-backend/notification_lambda/tests/: conftest.py  test_list_notifications.py
videopress-backend/shared/: README.md  __init__.py  auth.py  dynamo.py  logger.py  responses.py  secrets.py
videopress-backend/upload_lambda/: README.md  app.py
videopress-backend/upload_lambda/handlers/: __init__.py  confirm_upload.py  request_presigned_upload.py
videopress-backend/upload_lambda/services/: __init__.py  s3_service.py
videopress-backend/upload_lambda/tests/: conftest.py  test_request_presigned.py
videopress-cicd/: .gitignore  CHANGELOG.md  Jenkinsfile  README.md  VERSIONING.md  build.gradle  settings.gradle
videopress-cicd/.github/: CODEOWNERS  pull_request_template.md
videopress-cicd/docs/: on-call-runbook.md  pipeline-design.md  secrets-management.md
videopress-cicd/pipelines/: Jenkinsfile.backend.ci.sample  Jenkinsfile.iac.deploy.sample  Jenkinsfile.iac.plan.sample  Jenkinsfile.iac.rollback.sample  Jenkinsfile.layer-build.sample  Jenkinsfile.smoke-test.sample
videopress-cicd/resources/scripts/: infracost-diff.sh  tfsec-wrapper.sh
videopress-cicd/resources/templates/: plan-comment.md.tpl  slack-deploy.json.tpl  teams-deploy.json.tpl
videopress-cicd/vars/: pythonLambdaPipeline.groovy  smokeTestPipeline.groovy  terraformDeployPipeline.groovy  terraformPlanPipeline.groovy  terraformRollbackPipeline.groovy
videopress-infrastructure/: .gitignore  .pre-commit-config.yaml  .tflint.hcl  ARCHITECTURE.md  Jenkinsfile.deploy  Jenkinsfile.plan  Jenkinsfile.rollback  Makefile  README.md
videopress-infrastructure/.github/: CODEOWNERS  pull_request_template.md
videopress-infrastructure/bootstrap/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
videopress-infrastructure/envs/prod/: README.md  backend.tf  lambdas.auto.tfvars  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
videopress-infrastructure/envs/staging/: README.md  backend.tf  lambdas.auto.tfvars  main.tf  outputs.tf  (+3 more)
videopress-infrastructure/policies/: lambda-dynamodb-rw-scoped.json  lambda-execution-base.json  lambda-s3-rw-scoped.json  terraform-runner-prod.json
videopress-platform-docs/: README.md
(+72 files in other folders)
