# =============================================================================
# videopress-backend — shared dev tooling config
# =============================================================================
# File này KHÔNG dùng để package lambda (mỗi lambda có requirements.txt riêng).
# Mục đích: pin dev deps + cấu hình black/pylint/mypy/pytest dùng chung.
# =============================================================================

[project]
name = "videopress-backend"
version = "0.1.0"
description = "Python Lambda functions for VideoPress Platform"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "VideoPress Backend Team", email = "backend@videopress.example.com" }
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pylint>=3.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "moto[all]>=5.0",
    "boto3-stubs[essential,cognito-idp,dynamodb,s3,ses,secretsmanager,sqs]>=1.34",
    "types-requests",
]

# -----------------------------------------------------------------------------
# black — formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
    \.venv
  | dist
  | build
  | htmlcov
)/
'''

# -----------------------------------------------------------------------------
# pylint — linter
# -----------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.11"
jobs = 0  # auto-detect cores
ignore-paths = ["dist", "build", ".venv", "htmlcov"]

[tool.pylint."messages control"]
# C0114: missing-module-docstring
# C0115: missing-class-docstring
# C0116: missing-function-docstring
# Disable vì skeleton chưa cần docstring đầy đủ; bật lại khi code thật.
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",  # too-few-public-methods (dataclass / pydantic model)
]

[tool.pylint.format]
max-line-length = 100

# -----------------------------------------------------------------------------
# mypy — static type checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false   # bật dần khi code chín
ignore_missing_imports = true
exclude = ["dist/", "build/", "\\.venv/", "htmlcov/"]

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "shared",
    "authentication_lambda/tests",
    "notification_lambda/tests",
    "upload_lambda/tests",
    "compression_lambda/tests",
    "job_status_lambda/tests",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests (gọi AWS thật, chạy ở Jenkins stage riêng)",
    "slow: tests chậm (>1s)",
]

# -----------------------------------------------------------------------------
# coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = [
    "shared",
    "authentication_lambda",
    "notification_lambda",
    "upload_lambda",
    "compression_lambda",
    "job_status_lambda",
]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__init__.py",
    "dist/*",
    "build/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
